// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField is rendered as expected 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
      for="test"
      id="test-label"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        aria-label="input-test"
        autocomplete="current-password"
        class="MuiInputBase-input MuiInput-input"
        id="test"
        name="test"
        type="password"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordField readOnly ver is rendered as expected 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
      for="test"
      id="test-label"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-describedby="test-helper-text"
        aria-invalid="false"
        aria-label="input-test"
        autocomplete="current-password"
        class="MuiInputBase-input MuiInput-input"
        id="test"
        name="test"
        readonly=""
        type="password"
        value=""
      />
    </div>
    <p
      class="MuiFormHelperText-root"
      id="test-helper-text"
    >
      Read-only
    </p>
  </div>
</DocumentFragment>
`;
